Implementacao do botao do whatsaap

--- a/index.html
+++ b/index.html
@@ -251,11 +251,14 @@
       </div>
     </div>
   </footer>
-  
 
+  <!-- Botão de WhatsApp -->
+<a href="https://wa.me/559294806620" target="_blank" class="whatsapp-button">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+</a>
+
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Custom CSS -->
-  
+ 
 </body>
 </html>
