--- a/index.html
+++ b/index.html
@@ -147,13 +147,17 @@
         <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
       </div>
 
       <!-- Slides -->
       <div class="carousel-inner">
         <!-- Slide 1 -->
         <div class="carousel-item active">
-          <div class="card shadow border-0 mx-auto" style="max-width: 800px;">
+          <div class="card shadow border-0 mx-auto">
             <img src="assets/ingles.jpg" class="card-img-top" alt="Curso de Idiomas">
             <div class="card-body">
               <h5 class="card-title">Cursos de Idiomas</h5>
@@ -165,7 +169,7 @@
 
         <!-- Slide 2 -->
         <div class="carousel-item">
-          <div class="card shadow border-0 mx-auto" style="max-width: 800px;">
+          <div class="card shadow border-0 mx-auto">
             <img src="assets/informatica.jpg" class="card-img-top" alt="Informática Avançada">
             <div class="card-body">
               <h5 class="card-title">Informática Avançada</h5>
@@ -177,11 +181,59 @@
 
         <!-- Slide 3 -->
         <div class="carousel-item">
-          <div class="card shadow border-0 mx-auto" style="max-width: 800px;">
+          <div class="card shadow border-0 mx-auto">
             <img src="assets/inteligencia artificial.jpg" class="card-img-top" alt="Inteligência Artificial">
             <div class="card-body">
               <h5 class="card-title">Inteligência Artificial</h5>
-              <p class="card-text">O curso de Inteligência Artificial da SetProfissões oferece uma imersão profunda nas tecnologias mais inovadoras que estão transformando o mercado. Os alunos aprenderão desde os conceitos básicos até as técnicas mais avançadas, como aprendizado de máquina, redes neurais, processamento de linguagem natural e visão computacional. Ao concluir o curso, os participantes estarão preparados para desenvolver soluções de IA em diversas áreas, como automação, análise preditiva e inteligência de negócios, tornando-se profissionais essenciais no futuro digital.</p>
+              <p class="card-text">O curso de Inteligência Artificial da SetProfissões oferece uma imersão profunda nas tecnologias mais inovadoras que estão transformando o mercado. Os alunos aprenderão desde os conceitos básicos até as técnicas mais avançadas, como aprendizado de máquina, redes neurais, processamento de linguagem natural e visão computacional.</p>
+              <a href="#formulario" class="btn btn-primary">Saiba Mais</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 4 -->
+        <div class="carousel-item">
+          <div class="card shadow border-0 mx-auto">
+            <img src="assets/administrativo2.jpg" class="card-img-top" alt="Curso de Administrativo">
+            <div class="card-body">
+              <h5 class="card-title">Curso de Administrativo</h5>
+              <p class="card-text">O curso de Administrativo prepara os alunos para lidar com os desafios organizacionais em diversos setores. Desenvolva habilidades em gestão, administração de recursos e processos, tornando-se um profissional indispensável para o mercado.</p>
+              <a href="#formulario" class="btn btn-primary">Saiba Mais</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 5 -->
+        <div class="carousel-item">
+          <div class="card shadow border-0 mx-auto">
+            <img src="assets/powerbi.jpg" class="card-img-top" alt="Curso de Power BI">
+            <div class="card-body">
+              <h5 class="card-title">Curso de Power BI</h5>
+              <p class="card-text">Aprenda a criar dashboards interativos e relatórios poderosos com o curso de Power BI. Desenvolva habilidades de análise de dados e tomada de decisões baseada em dados.</p>
+              <a href="#formulario" class="btn btn-primary">Saiba Mais</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 6 -->
+        <div class="carousel-item">
+          <div class="card shadow border-0 mx-auto">
+            <img src="assets/designer.jpg" class="card-img-top" alt="Curso de Designer">
+            <div class="card-body">
+              <h5 class="card-title">Curso de Designer</h5>
+              <p class="card-text">Desperte sua criatividade e desenvolva habilidades práticas com o curso de Designer. Domine ferramentas de design gráfico e torne-se um profissional requisitado no mercado.</p>
+              <a href="#formulario" class="btn btn-primary">Saiba Mais</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 7 -->
+        <div class="carousel-item">
+          <div class="card shadow border-0 mx-auto">
+            <img src="assets/pacoteoffice.jpg" class="card-img-top" alt="Curso de Pacote Office">
+            <div class="card-body">
+              <h5 class="card-title">Curso de Pacote Office</h5>
+              <p class="card-text">Domine as ferramentas do Pacote Office, como Word, Excel e PowerPoint, e destaque-se no mercado com habilidades essenciais para diversas áreas profissionais.</p>
               <a href="#formulario" class="btn btn-primary">Saiba Mais</a>
             </div>
           </div>
@@ -193,13 +245,14 @@
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Anterior</span>
       </button>
-      <button class="carousel-control-next " type="button" data-bs-target="#cursosCarousel" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#cursosCarousel" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Próximo</span>
       </button>
     </div>
   </div>
 </section>
+
 
 
   <!-- Seção "Formulário de Inscrição" -->
