--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <img src="assets/ingles.jpg" class="card-img-top" alt="Curso de Idiomas">
             <div class="card-body">
               <h5 class="card-title">Cursos de Idiomas</h5>
-              <p class="card-text">A SetProfissões oferece aos seus alunos cursos de idiomas, proporcionando uma imersão completa em diversos idiomas para abrir novas portas no mercado global. Com metodologias dinâmicas e práticas, nossos cursos têm como objetivo desenvolver fluência e confiança, tornando o domínio de um novo idioma um grande diferencial competitivo na sua trajetória profissional.</p>
+              <p class="card-text">A SetProfissões oferece cursos de idiomas focados em fluência e confiança, preparando os alunos para se destacarem no mercado global.</p>
               <a href="#formulario" class="btn btn-primary">Saiba Mais</a>
             </div>
           </div>
@@ -173,7 +173,7 @@
             <img src="assets/informatica.jpg" class="card-img-top" alt="Informática Avançada">
             <div class="card-body">
               <h5 class="card-title">Informática Avançada</h5>
-              <p class="card-text">A SetProfissões oferece o curso de Informática Avançada, que capacita os alunos a dominar ferramentas e técnicas de alta performance no uso de softwares e aplicativos essenciais para o mercado de trabalho. O curso é voltado para quem deseja se destacar em áreas como programação, design gráfico, análise de dados e gestão de redes, proporcionando habilidades que atendem às exigências mais desafiadoras do setor tecnológico.</p>
+              <p class="card-text">A SetProfissões oferece o curso de Informática Avançada, que capacita os alunos a dominar ferramentas e técnicas essenciais para áreas como programação, design gráfico, análise de dados e gestão de redes, preparando-os para o mercado de trabalho.</p>
               <a href="#formulario" class="btn btn-primary">Saiba Mais</a>
             </div>
           </div>
@@ -185,7 +185,7 @@
             <img src="assets/inteligencia artificial.jpg" class="card-img-top" alt="Inteligência Artificial">
             <div class="card-body">
               <h5 class="card-title">Inteligência Artificial</h5>
-              <p class="card-text">O curso de Inteligência Artificial da SetProfissões oferece uma imersão profunda nas tecnologias mais inovadoras que estão transformando o mercado. Os alunos aprenderão desde os conceitos básicos até as técnicas mais avançadas, como aprendizado de máquina, redes neurais, processamento de linguagem natural e visão computacional.</p>
+              <p class="card-text">O curso de Inteligência Artificial da SetProfissões oferece uma imersão em tecnologias inovadoras, como aprendizado de máquina, redes neurais e visão computacional, preparando os alunos para o mercado digital.</p>
               <a href="#formulario" class="btn btn-primary">Saiba Mais</a>
             </div>
           </div>
